tests/negative/typecheck/orelse-non-opt.orng
fn main() -> Int {4 orelse 5}